--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ main{
 
 .top-full-width:hover img{
     transition: transform .5s;
-transform: scale(1.5)  translate(-300px, 0px);
+transform: scale(1.5)  translate(-200px, 0px);
 }
 .top-section{
     padding-top: 10px;
@@ -207,8 +207,8 @@ line-height: 28px;
 display: flex;
 flex-direction: column;
 align-items: center;
-background-image: url("../images/backgrounds/field.webp");
-background-repeat: no-repeat;
+background-image: url("../images/backgrounds/ball.jpg");
+
 background-attachment: fixed;
 }
 .contact-form{
